--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+:root[data-theme="dark"] {
+    --primary-color: #000000;
+    --text-color: #FFF;
+    --text-color-transparent: rgba(255, 255, 255, 0.80);
+    --border-color: rgba(255, 255, 255, 0.15);
+    --burger-menu-hover-color: #252525;
+    --icon-filter: none;
+    --next-video-square-color: rgba(255, 255, 255, 0.4);
+    --aside-rectangle-color: #12141D;
+    --form-input-background: #12141D;
+}
+
+:root[data-theme="light"] {
+    --primary-color: #FFF;
+    --text-color: #000000;
+    --text-color-transparent: rgba(0, 0, 0, 0.80);
+    --border-color: #000000;
+    --burger-menu-hover-color: #c60f0fcd;
+    --icon-filter: grayscale(100%) brightness(0%) contrast(300%);
+    --next-video-square-color: rgba(0, 0, 0, 0.4);
+    --aside-rectangle-color: rgba(0, 0, 0, 0.50);
+    --form-input-background: rgba(0, 0, 0, 0.50);
+}
+
 * {
     margin: 0;
     border: 0;
@@ -9,7 +33,7 @@
 }
 
 body {
-    background: #000000;
+    background: var(--primary-color);
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -44,6 +68,7 @@ h1, h2, h3, h4, h5, h6, p, a {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 20px;
 }
 
 .logo-container > img {
@@ -57,7 +82,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .company-name > p {
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 15px;
     line-height: 18px;
     text-transform: uppercase;
@@ -69,7 +94,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .company-address > p {
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 15px;
     line-height: 18px;
     text-transform: uppercase;
@@ -80,21 +105,22 @@ h1, h2, h3, h4, h5, h6, p, a {
     width: 85px;
     height: 85px;
     flex-shrink: 0;
-    border-left: 1px solid rgba(255, 255, 255, 0.15);
-    border-right: 1px solid rgba(255, 255, 255, 0.15);
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .burger-menu:hover {
-    background-color: #252525;
+    background-color: var(--burger-menu-hover-color);
     cursor: pointer;
 }
 
 .burger-menu > img {
     width: 34px;
     height: 16px;
+    filter: var(--icon-filter);
 }
 
 .contact-us {
@@ -103,6 +129,7 @@ h1, h2, h3, h4, h5, h6, p, a {
     justify-content: space-between;
     gap: 30px;
     align-items: center;
+    margin-right: 20px;
 }
 
 .translate-button {
@@ -127,6 +154,28 @@ h1, h2, h3, h4, h5, h6, p, a {
     cursor: pointer;
 }
 
+.theme-button {
+    width: fit-content;
+    height: 43px;
+    border-radius: 4px;
+    background: #C6100F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    text-align: center;
+    font-size: 14px;
+    line-height: 19.6px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.theme-button:hover {
+    background: #a50d0d;
+    cursor: pointer;
+}
+
 .shopping-cart {
     display: flex;
     justify-content: space-between;
@@ -137,6 +186,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 .shopping-cart > img {
     width: 23px;
     height: 23px;
+    filter: var(--icon-filter);
 }
 
 .cart-items-number {
@@ -191,7 +241,7 @@ main {
 
 .company-name-huge {
     max-width: 1440px;
-    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    border-top: 1px solid var(--border-color);
     padding: 145px 120px 25px 120px;
     display: flex;
     flex-direction: column;
@@ -203,7 +253,7 @@ main {
 h1 {
     max-width: 1200px;
     height: 390px;
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 130px;
     line-height: 130px;
     text-transform: uppercase;
@@ -293,13 +343,13 @@ h1 {
 .items-order .square-actual {
     width: 11px;
     height: 11px;
-    background: #FFF;
+    background: var(--text-color);
 }
 
 .items-order .square {
     width: 11px;
     height: 11px;
-    background: rgba(255, 255, 255, 0.40);
+    background: var(--next-video-square-color);
 }
 
 .intro-info {
@@ -312,7 +362,7 @@ h1 {
 
 .intro-info-header {
     max-width: 530px;
-    color: #FFF;
+    color: var(--text-color);
     font-size: 80px;
     line-height: 88px;
     letter-spacing: 1px;
@@ -329,7 +379,7 @@ h1 {
 
 .intro-info-text-1 {
     max-width: 428px;
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 20px;
     line-height: 24px;
     
@@ -337,7 +387,7 @@ h1 {
 
 .intro-info-text-2 {
     max-width: 407px;
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 20px;
     line-height: 24px;
 }
@@ -372,7 +422,7 @@ h1 {
 }
 
 .collaborations > h4 {
-    color: #FFF;
+    color: var(--text-color);
     text-align: center;
     font-size: 20px;
     line-height: 30px;
@@ -396,17 +446,20 @@ h1 {
     height: 53px;
     margin-right: 86px;
     margin-left: 6px;
+    filter: var(--icon-filter);
 }
 
 #collaboration-logo-2 {
     width: 45px;
     height: 54px;
+    filter: var(--icon-filter);
 }
 
 #collaboration-logo-3 {
     width: 120px;
     height: 13px;
     margin-left: 107px;
+    filter: var(--icon-filter);
 }
 
 #collaboration-logo-4 {
@@ -414,28 +467,31 @@ h1 {
     height: 26px;
     margin-right: 68px;
     margin-left: 34px;
+    filter: var(--icon-filter);
 }
 
 #collaboration-logo-5 {
     width: 135px;
     height: 61px;
+    filter: var(--icon-filter);
 }
 
 #collaboration-logo-6 {
     width: 100px;
     height: 24px;
     margin-left: 72px;
+    filter: var(--icon-filter);
 }
 
 .collaborations .view-work-button {
-    background-color: #000000;
+    background-color: var(--primary-color);
     border-bottom: 1px solid rgba(255, 255, 255, 0.30);
     margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 119px;
-    color: #FFF;
+    color: var(--text-color);
     text-align: center;
     font-size: 13px;
     line-height: 22px;
@@ -445,7 +501,7 @@ h1 {
 
 .collaborations .view-work-button:hover {
     cursor: pointer;
-    border-color: #FFF;
+    border-color: var(--text-color);
 }
 
 .our-work-section {
@@ -458,7 +514,7 @@ h1 {
 }
 
 .our-work-header {
-    color: #FFF;
+    color: var(--text-color);
     text-align: center;
     font-size: 130px;
     line-height: 130px;
@@ -499,7 +555,7 @@ h1 {
 }
 
 .section-header {
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 80px;
     line-height: 88px;
     letter-spacing: 1px;
@@ -636,7 +692,7 @@ h1 {
 
 .review-text {
     width: 572px;
-    color: #FFF;
+    color: var(--text-color);;
     text-align: center;
     font-size: 30px;
     line-height: 33px;
@@ -654,7 +710,7 @@ h1 {
 }
 
 .credits > p {
-    color: rgba(255, 255, 255, 0.70);
+    color: var(--text-color-transparent);
     text-align: center;
     font-size: 15px;
     line-height: 20px;
@@ -715,7 +771,7 @@ h1 {
 }
 
 .parameter-name span {
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
@@ -772,7 +828,7 @@ h1 {
 }
 
 .fun-facts-header {
-    color: #FFF;
+    color: var(--text-color);;
     text-align: center;
     font-size: 40px;
     line-height: 44px;
@@ -814,14 +870,14 @@ h1 {
 
 .fact-info > h3 {
     width: 151px;
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 48px;
     line-height: 50px;
     text-transform: uppercase;
 }
 
 .fact-info > p {
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 20px;
     line-height: 24px;
 }
@@ -856,7 +912,7 @@ h1 {
 }
 
 .aside-rectangle {
-    background: #12141D;
+    background: var(--aside-rectangle-color);
     width: 218px;
 }
 
@@ -872,7 +928,7 @@ h1 {
 }
 
 .form-container .section-header {
-    max-width: 494px;
+    max-width: 600px;
 }
 
 .form {
@@ -892,7 +948,7 @@ h1 {
     height: 45px;
     padding: 11px 0px 10px 28px;
     border: 1px solid rgba(255, 255, 255, 0.20);
-    background: #12141D;
+    background: var(--form-input-background);
     color: rgba(255, 255, 255, 0.80);
     font-size: 20px;
     line-height: 24px;
@@ -987,7 +1043,7 @@ h1 {
 
 .blog-type {
     box-sizing: border-box;
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 12px;
     line-height: 20px;
     letter-spacing: 1px;
@@ -1026,7 +1082,7 @@ h1 {
 
 .read-more:hover {
     cursor: pointer;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.60);
+    border-bottom: 1px solid #FFF;
 }
 
 footer {
@@ -1080,11 +1136,12 @@ footer {
 .company-info > img {
     width: 90px;
     height: 25px;
+    filter: var(--icon-filter);
 }
 
 .company-info > p {
     width: 493px;
-    color: rgba(255, 255, 255, 0.80);
+    color: var(--text-color-transparent);
     font-size: 20px;
     line-height: 24px;
 }
@@ -1098,7 +1155,7 @@ footer {
 }
 
 .links a {
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
@@ -1109,7 +1166,7 @@ footer {
 .links a:hover {
     cursor: pointer;
     text-decoration:underline;
-    text-decoration-color: #FFF;
+    text-decoration-color: var(--text-color);;
 }
 
 .contacts-container {
@@ -1141,10 +1198,11 @@ footer {
 .social-contact > img {
     width: 16px;
     height: 16px;
+    filter: var(--icon-filter);
 }
 
 .social-contact > p {
-    color: #FFF;
+    color: var(--text-color);;
     font-size: 15px;
     line-height: 20px;
 }
@@ -1172,7 +1230,7 @@ footer {
 }
 
 .company-contacts > p {
-    color: #FFF;
+    color: var(--text-color);;
     text-align: right;
     font-size: 17px;
     line-height: 20.4px;
@@ -1181,20 +1239,20 @@ footer {
 }
 
 .copyright{
-    color: rgba(255, 255, 255, 0.70);;
+    color: var(--text-color-transparent);
     font-size: 16px;
     line-height: 20px;
 }
 
 .copyright a {
     font-size: 14px;
-    color: #FFF;
+    color: var(--text-color);;
 }
 
 .copyright a:hover {
     cursor: pointer;
     text-decoration:underline;
-    text-decoration-color: #FFF;
+    text-decoration-color: var(--text-color);;
 }
 
 @media (max-width: 768px) {
