--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ h1 {
     position: absolute;
     left: 295px;
     top: 202px;
+    max-width: 145px;
     transition: 1s;
     cursor: pointer;
 }
@@ -303,6 +304,10 @@ h1 {
 .video-container .play-video:hover {
     scale: 1.2;
     transition: 0.3s;
+}
+
+.audio {
+    display: none;
 }
 
 .intro-video .next-video {
